--- a/foodadmin/package.json
+++ b/foodadmin/package.json
@@ -13,7 +13,9 @@
     "lucide-react": "^0.343.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-bootstrap": "^2.10.1",
+    "react-dom": "^18",
+    "recharts": "^2.12.2"
   },
   "devDependencies": {
     "eslint": "^8",
