--- a/user/package.json
+++ b/user/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "foodadmin",
+  "name": "user",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,16 +10,14 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
-    "lucide-react": "^0.343.0",
-    "next": "14.1.0",
+    "next": "14.2.0",
     "react": "^18",
-    "react-bootstrap": "^2.10.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
-    "react-search-autocomplete": "^8.5.2",
-    "recharts": "^2.12.2"
+    "react-search-autocomplete": "^8.5.2"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.2.0"
   }
 }
