--- a/foodadmin/package.json
+++ b/foodadmin/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@szhsin/react-menu": "^4.1.0",
     "bootstrap": "^5.3.3",
     "lucide-react": "^0.343.0",
     "next": "14.1.0",
