--- a/foodadmin/package.json
+++ b/foodadmin/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.6",
+    "@ant-design/nextjs-registry": "^1.0.0",
     "@szhsin/react-menu": "^4.1.0",
+    "@wojtekmaj/react-daterange-picker": "^5.5.0",
+    "antd": "^5.16.2",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.10",
     "lucide-react": "^0.343.0",
     "next": "14.1.0",
     "react": "^18",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18",
     "react-search-autocomplete": "^8.5.2",
+    "react-select": "^5.8.0",
     "recharts": "^2.12.2"
   },
   "devDependencies": {
