--- a/foodadmin/package.json
+++ b/foodadmin/package.json
@@ -14,9 +14,10 @@
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.10",
     "lucide-react": "^0.343.0",
-    "next": "14.1.0",
+    "next": "^14.2.3",
     "react": "^18",
     "react-bootstrap": "^2.10.1",
+    "react-bootstrap-typeahead": "^6.3.2",
     "react-dom": "^18",
     "react-search-autocomplete": "^8.5.2",
     "react-select": "^5.8.0",
